code editor ui fixed with scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,32 +3,67 @@
 @tailwind components;
 @tailwind utilities;
 
-.editor-container {
-    display: flex;
-    width: 54%;
-}
+.editor {
+    display: inline-flex;
+    gap: 10px;
+    font-family: monospace;
+    line-height: 21px;
+    background: #282a3a;
+    border-radius: 2px;
+    padding: 20px 10px;
+    overflow: auto;
+    height: 50vh;
+    width: 50vw;
+  }
+  
 
-.line-number-container {
-    padding: 0 10px;
-    background-color: #3b3b3b;
-}
-
-.line-number {
-    color: #fff9f9;
-}
-
-.code-textarea {
-    flex: 1;
-    border: none;
-    resize: none;
-    padding: 5px;
-    background-color: #f7f7f7;
-    font-family: 'Courier New', Courier, monospace; /* Set a monospace font */
-     
-
-}
-
-.code-textarea:focus {
+  
+  textarea {
+    line-height: 21px;
+    overflow-y: hidden;
+    padding: 0;
+    border: 0;
+    background: #282a3a;
+    color: #fff;
+    min-width: 500px;
     outline: none;
+    resize: none;
+  }
+  .line-numbers {
+    width: 20px;
+    text-align: right;
+  }
+  
+
+  .line-numbers span {
+    display: block;
+    color: #506882;
+  }
+  
+::-webkit-scrollbar {
+    width: 12px; 
 }
 
+::-webkit-scrollbar-thumb {
+    background: #505159; 
+   
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+
+::-webkit-scrollbar-thumb:active {
+    background: #777; 
+}
+
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+
+::-webkit-scrollbar-track:hover {
+    background: #ddd;
+}
